# ContestKit

./: .env.example  .gitignore  README.md  alembic.ini  debug_page.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260408_0001_initial_schema.py
data/: debug.txt  debug2.txt  inspect_output.txt  problems.csv  scrape_log.json  testforge_validation.db
src/: __init__.py  settings.py
src/api/: main.py
src/db/: __init__.py  base.py  models.py  repository.py  session.py
src/ml/: export_training_snapshot.py  generate_features.py  snapshot_utils.py  train.py  training_utils.py
src/optimizer/: assemble.py
src/scraper/: README.md  __init__.py  scraper.py
tests/: test_scraper_naming.py  test_snapshot_utils.py  test_training_utils.py  test_upsert_problem.py
